Made a new notebook for data collection

--- a/Collect_data.ipynb
+++ b/Collect_data.ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "47f78c08-d631-49c1-b60a-8d65c0186230",
    "metadata": {},
    "outputs": [
@@ -411,10 +411,217 @@
       "Beregner 'dolvol', 'lambda' og 'rvol_m'...\n",
       "Beregnede kolonner 'dolvol', 'lambda' og 'rvol_m' succesfuldt.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>eom</th>\n",
+       "      <th>sic</th>\n",
+       "      <th>size_grp</th>\n",
+       "      <th>me</th>\n",
+       "      <th>rvol_252d</th>\n",
+       "      <th>dolvol_126d</th>\n",
+       "      <th>age</th>\n",
+       "      <th>aliq_at</th>\n",
+       "      <th>aliq_mat</th>\n",
+       "      <th>...</th>\n",
+       "      <th>tax_gr1a</th>\n",
+       "      <th>turnover_126d</th>\n",
+       "      <th>turnover_var_126d</th>\n",
+       "      <th>z_score</th>\n",
+       "      <th>zero_trades_126d</th>\n",
+       "      <th>zero_trades_21d</th>\n",
+       "      <th>zero_trades_252d</th>\n",
+       "      <th>dolvol</th>\n",
+       "      <th>lambda</th>\n",
+       "      <th>rvol_m</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2010-01-31</td>\n",
+       "      <td>7372</td>\n",
+       "      <td>mega</td>\n",
+       "      <td>115558.73052</td>\n",
+       "      <td>0.019544</td>\n",
+       "      <td>6.798938e+08</td>\n",
+       "      <td>301</td>\n",
+       "      <td>0.526422</td>\n",
+       "      <td>0.232151</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.000151</td>\n",
+       "      <td>0.006062</td>\n",
+       "      <td>0.439375</td>\n",
+       "      <td>4.269989</td>\n",
+       "      <td>0.002792</td>\n",
+       "      <td>0.002780</td>\n",
+       "      <td>0.002652</td>\n",
+       "      <td>6.798938e+08</td>\n",
+       "      <td>2.941636e-10</td>\n",
+       "      <td>0.089560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2010-02-28</td>\n",
+       "      <td>7372</td>\n",
+       "      <td>mega</td>\n",
+       "      <td>123619.74809</td>\n",
+       "      <td>0.018949</td>\n",
+       "      <td>7.094750e+08</td>\n",
+       "      <td>302</td>\n",
+       "      <td>0.526422</td>\n",
+       "      <td>0.249602</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.000151</td>\n",
+       "      <td>0.006243</td>\n",
+       "      <td>0.425637</td>\n",
+       "      <td>4.269989</td>\n",
+       "      <td>0.002704</td>\n",
+       "      <td>0.002416</td>\n",
+       "      <td>0.002676</td>\n",
+       "      <td>7.094750e+08</td>\n",
+       "      <td>2.818986e-10</td>\n",
+       "      <td>0.086833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2010-03-31</td>\n",
+       "      <td>7372</td>\n",
+       "      <td>mega</td>\n",
+       "      <td>129040.82501</td>\n",
+       "      <td>0.015241</td>\n",
+       "      <td>6.982804e+08</td>\n",
+       "      <td>303</td>\n",
+       "      <td>0.570962</td>\n",
+       "      <td>0.230516</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000186</td>\n",
+       "      <td>0.005967</td>\n",
+       "      <td>0.356592</td>\n",
+       "      <td>4.405333</td>\n",
+       "      <td>0.002753</td>\n",
+       "      <td>0.002751</td>\n",
+       "      <td>0.002807</td>\n",
+       "      <td>6.982804e+08</td>\n",
+       "      <td>2.864179e-10</td>\n",
+       "      <td>0.069843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2010-04-30</td>\n",
+       "      <td>7372</td>\n",
+       "      <td>mega</td>\n",
+       "      <td>130101.18774</td>\n",
+       "      <td>0.014489</td>\n",
+       "      <td>6.802223e+08</td>\n",
+       "      <td>304</td>\n",
+       "      <td>0.570962</td>\n",
+       "      <td>0.218079</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000186</td>\n",
+       "      <td>0.005590</td>\n",
+       "      <td>0.344846</td>\n",
+       "      <td>4.405333</td>\n",
+       "      <td>0.002935</td>\n",
+       "      <td>0.003165</td>\n",
+       "      <td>0.002890</td>\n",
+       "      <td>6.802223e+08</td>\n",
+       "      <td>2.940215e-10</td>\n",
+       "      <td>0.066398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10104</td>\n",
+       "      <td>2010-05-31</td>\n",
+       "      <td>7372</td>\n",
+       "      <td>mega</td>\n",
+       "      <td>113436.81847</td>\n",
+       "      <td>0.015136</td>\n",
+       "      <td>7.368972e+08</td>\n",
+       "      <td>305</td>\n",
+       "      <td>0.570962</td>\n",
+       "      <td>0.215020</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000186</td>\n",
+       "      <td>0.006023</td>\n",
+       "      <td>0.361901</td>\n",
+       "      <td>4.405333</td>\n",
+       "      <td>0.002833</td>\n",
+       "      <td>0.002529</td>\n",
+       "      <td>0.002844</td>\n",
+       "      <td>7.368972e+08</td>\n",
+       "      <td>2.714083e-10</td>\n",
+       "      <td>0.069360</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 162 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id        eom   sic size_grp            me  rvol_252d   dolvol_126d  \\\n",
+       "0  10104 2010-01-31  7372     mega  115558.73052   0.019544  6.798938e+08   \n",
+       "1  10104 2010-02-28  7372     mega  123619.74809   0.018949  7.094750e+08   \n",
+       "2  10104 2010-03-31  7372     mega  129040.82501   0.015241  6.982804e+08   \n",
+       "3  10104 2010-04-30  7372     mega  130101.18774   0.014489  6.802223e+08   \n",
+       "4  10104 2010-05-31  7372     mega  113436.81847   0.015136  7.368972e+08   \n",
+       "\n",
+       "   age   aliq_at  aliq_mat  ...  tax_gr1a  turnover_126d  turnover_var_126d  \\\n",
+       "0  301  0.526422  0.232151  ... -0.000151       0.006062           0.439375   \n",
+       "1  302  0.526422  0.249602  ... -0.000151       0.006243           0.425637   \n",
+       "2  303  0.570962  0.230516  ...  0.000186       0.005967           0.356592   \n",
+       "3  304  0.570962  0.218079  ...  0.000186       0.005590           0.344846   \n",
+       "4  305  0.570962  0.215020  ...  0.000186       0.006023           0.361901   \n",
+       "\n",
+       "    z_score  zero_trades_126d  zero_trades_21d  zero_trades_252d  \\\n",
+       "0  4.269989          0.002792         0.002780          0.002652   \n",
+       "1  4.269989          0.002704         0.002416          0.002676   \n",
+       "2  4.405333          0.002753         0.002751          0.002807   \n",
+       "3  4.405333          0.002935         0.003165          0.002890   \n",
+       "4  4.405333          0.002833         0.002529          0.002844   \n",
+       "\n",
+       "         dolvol        lambda    rvol_m  \n",
+       "0  6.798938e+08  2.941636e-10  0.089560  \n",
+       "1  7.094750e+08  2.818986e-10  0.086833  \n",
+       "2  6.982804e+08  2.864179e-10  0.069843  \n",
+       "3  6.802223e+08  2.940215e-10  0.066398  \n",
+       "4  7.368972e+08  2.714083e-10  0.069360  \n",
+       "\n",
+       "[5 rows x 162 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data=calculate_derived_columns(data, 0.1)"
+    "data=calculate_derived_columns(data, 0.1)\n",
+    "data.head()"
    ]
   },
   {
@@ -913,7 +1120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
