Made a new notebook for data collection

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "d00cd035-b96d-4ee2-974e-ba1cda950c9b",
    "metadata": {},
    "outputs": [
@@ -40,8 +40,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Der opstod en fejl ved indlæsning eller filtrering af filen: 'excntry'\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'head'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mPrepare_Data\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyarrow\u001b[39;00m \n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m#autoreload download #pip install ipython\u001b[39;00m\n",
+      "File \u001b[1;32m~\\PycharmProjects\\Master\\Prepare_Data.py:295\u001b[0m\n\u001b[0;32m    290\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m wealth[[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124meom\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwealth\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtret\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\u001b[38;5;241m.\u001b[39mrename(columns\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtret\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmu_ld1\u001b[39m\u001b[38;5;124m\"\u001b[39m})\n\u001b[0;32m    294\u001b[0m market \u001b[38;5;241m=\u001b[39m load_and_filter_market_returns(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata_test/market_returns_test.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 295\u001b[0m \u001b[38;5;28mprint\u001b[39m(market\u001b[38;5;241m.\u001b[39mhead())\n\u001b[0;32m    296\u001b[0m risk_free \u001b[38;5;241m=\u001b[39m process_risk_free_rate(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata_test/risk_free_test.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    297\u001b[0m \u001b[38;5;28mprint\u001b[39m(risk_free\u001b[38;5;241m.\u001b[39mhead())\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'head'"
      ]
     }
    ],
