Nye funktioner i prepare_data

--- a/Lokal_test.ipynb
+++ b/Lokal_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "18690dbb-f861-4899-b70d-ada55a051871",
    "metadata": {},
    "outputs": [],
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "2db9d9e6-fac1-4fef-929d-8995b6d70d2a",
    "metadata": {},
    "outputs": [],
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "e22582cb-f282-499f-9b2b-e1f6544a9859",
    "metadata": {},
    "outputs": [
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "0fbfd63f-a1ff-42c1-90c5-b37ec3c0d418",
    "metadata": {},
    "outputs": [
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "b649c7a1-eecd-4c0d-9b95-9a79564d0c7c",
    "metadata": {},
    "outputs": [
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "5356f817-a44f-45d4-aa35-34773b6188a2",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "178453c8-9ce5-47b4-b3b9-1088eece9039",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "38436888-aff6-43a9-a548-c4edb9d14db0",
    "metadata": {},
    "outputs": [
@@ -890,21 +890,31 @@
      "text": [
       "id                           int64\n",
       "eom                 datetime64[ns]\n",
-      "sic                         object\n",
-      "size_grp                    object\n",
-      "me                         float64\n",
+      "tr_ld0                     float64\n",
+      "eom_ret             datetime64[ns]\n",
+      "ret_ld1                    float64\n",
       "                         ...      \n",
       "zero_trades_21d            float64\n",
       "zero_trades_252d           float64\n",
       "dolvol                     float64\n",
       "lambda                     float64\n",
       "rvol_m                     float64\n",
-      "Length: 123, dtype: object\n"
+      "Length: 127, dtype: object\n"
      ]
     }
    ],
    "source": [
     "print(chars.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cda6db48-f963-4e65-950f-7c1207c27920",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wealth = wealth_func"
    ]
   },
   {
