--- a/Lokal_test.ipynb
+++ b/Lokal_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "18690dbb-f861-4899-b70d-ada55a051871",
    "metadata": {},
    "outputs": [],
@@ -10,9 +10,9 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from General_Functions import long_horizon_ret\n",
-    "from Main import settings, features\n",
+    "from Main import settings, features, pf_set\n",
     "from pandas.tseries.offsets import MonthEnd\n",
-    "from Prepare_Data import process_risk_free_rate, process_return_data, wealth_func\n",
+    "from Prepare_Data import process_risk_free_rate, process_return_data, wealth_func, load_and_filter_market_returns_test\n",
     "import numpy as np"
    ]
   },
@@ -909,12 +909,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "cda6db48-f963-4e65-950f-7c1207c27920",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filen er indlæst og filtreret succesfuldt.\n",
+      "          eom  mkt_vw_exc\n",
+      "0  2010-01-31   -0.038043\n",
+      "1  2010-02-28    0.034614\n",
+      "2  2010-03-31    0.064495\n",
+      "3  2010-04-30    0.019148\n",
+      "4  2010-05-31   -0.081046\n",
+      "         eom      rf\n",
+      "0 2010-01-31  0.0000\n",
+      "1 2010-02-28  0.0000\n",
+      "2 2010-03-31  0.0001\n",
+      "3 2010-04-30  0.0001\n",
+      "4 2010-05-31  0.0001\n",
+      "         eom        wealth    mu_ld1\n",
+      "0 2010-01-31  1.468331e+09 -0.038043\n",
+      "1 2010-02-28  1.414519e+09  0.034614\n",
+      "2 2010-03-31  1.465237e+09  0.064595\n",
+      "3 2010-04-30  1.566419e+09  0.019248\n",
+      "4 2010-05-31  1.597162e+09 -0.080946\n",
+      "           eom        wealth    mu_ld1\n",
+      "164 2023-09-30  9.779494e+09 -0.048173\n",
+      "165 2023-10-31  9.330037e+09 -0.029172\n",
+      "166 2023-11-30  9.065579e+09  0.093442\n",
+      "167 2023-12-31           NaN       NaN\n",
+      "168 2023-12-31  1.000000e+10       NaN\n"
+     ]
+    }
+   ],
    "source": [
-    "wealth = wealth_func"
+    "market_path=\"./data_test/market_returns_test.csv\"\n",
+    "market = load_and_filter_market_returns_test(market_path)\n",
+    "print(market.head())\n",
+    "risk_free = process_risk_free_rate(risk_free_path)\n",
+    "print(risk_free.head())\n",
+    "#wealth_end = 1e+10\n",
+    "wealth_end = pf_set[\"wealth\"]\n",
+    "end = settings[\"split\"][\"test_end\"]\n",
+    "#end = \"2023-11-30\"\n",
+    "\n",
+    "wealth = wealth_func(wealth_end, end, market, risk_free)\n",
+    "print(wealth.head())\n",
+    "print(wealth.tail())"
    ]
   },
   {
