Ny wealth funktion

--- a/Lokal_test.ipynb
+++ b/Lokal_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "18690dbb-f861-4899-b70d-ada55a051871",
    "metadata": {},
    "outputs": [],
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "83da3786-d373-4039-b6ff-3b7164902582",
    "metadata": {},
    "outputs": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "id": "2db9d9e6-fac1-4fef-929d-8995b6d70d2a",
    "metadata": {},
    "outputs": [],
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "id": "e22582cb-f282-499f-9b2b-e1f6544a9859",
    "metadata": {},
    "outputs": [
@@ -597,69 +597,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          id        eom   sic size_grp            me  rvol_252d   dolvol_126d  \\\n",
-      "0      10104 2010-01-31  7372     mega  115558.73052   0.019544  6.798938e+08   \n",
-      "1      10104 2010-02-28  7372     mega  123619.74809   0.018949  7.094750e+08   \n",
-      "2      10104 2010-03-31  7372     mega  129040.82501   0.015241  6.982804e+08   \n",
-      "3      10104 2010-04-30  7372     mega  130101.18774   0.014489  6.802223e+08   \n",
-      "4      10104 2010-05-31  7372     mega  113436.81847   0.015136  7.368972e+08   \n",
-      "...      ...        ...   ...      ...           ...        ...           ...   \n",
-      "28708  92655 2023-07-31  6324     mega  471446.66929   0.014563  1.732788e+09   \n",
-      "28709  92655 2023-08-31  6324     mega  441458.42446   0.014580  1.619178e+09   \n",
-      "28710  92655 2023-09-30  6324     mega  467033.72021   0.014428  1.619647e+09   \n",
-      "28711  92655 2023-10-31  6324     mega  496091.90354   0.014193  1.578173e+09   \n",
-      "28712  92655 2023-11-30  6324     mega  511455.75015   0.013393  1.621881e+09   \n",
-      "\n",
-      "       age   aliq_at  aliq_mat  ...  taccruals_at  taccruals_ni  tangibility  \\\n",
-      "0      301  0.526422  0.232151  ...     -0.040247     -0.378191     0.384579   \n",
-      "1      302  0.526422  0.249602  ...     -0.040247     -0.378191     0.384579   \n",
-      "2      303  0.570962  0.230516  ...     -0.009307     -0.086350     0.384579   \n",
-      "3      304  0.570962  0.218079  ...     -0.009307     -0.086350     0.384579   \n",
-      "4      305  0.570962  0.215020  ...     -0.009307     -0.086350     0.384579   \n",
-      "...    ...       ...       ...  ...           ...           ...          ...   \n",
-      "28708  487  0.536309  0.181335  ...     -0.133725     -1.832255     0.247139   \n",
-      "28709  488  0.536309  0.187952  ...     -0.133725     -1.832255     0.247139   \n",
-      "28710  489  0.536309  0.192017  ...     -0.133725     -1.832255     0.247139   \n",
-      "28711  490  0.501638  0.171298  ...     -0.119041     -1.580017     0.247139   \n",
-      "28712  491  0.501638  0.173220  ...     -0.119041     -1.580017     0.247139   \n",
-      "\n",
-      "       tax_gr1a  turnover_126d  turnover_var_126d  zero_trades_126d  \\\n",
-      "0     -0.000151       0.006062           0.439375          0.002792   \n",
-      "1     -0.000151       0.006243           0.425637          0.002704   \n",
-      "2      0.000186       0.005967           0.356592          0.002753   \n",
-      "3      0.000186       0.005590           0.344846          0.002935   \n",
-      "4      0.000186       0.006023           0.361901          0.002833   \n",
-      "...         ...            ...                ...               ...   \n",
-      "28708  0.004618       0.003850           0.522602          0.004023   \n",
-      "28709  0.004618       0.003587           0.534361          0.004160   \n",
-      "28710  0.004618       0.003568           0.549164          0.004167   \n",
-      "28711  0.004090       0.003454           0.557890          0.004247   \n",
-      "28712  0.004090       0.003501           0.560694          0.004224   \n",
-      "\n",
-      "       zero_trades_21d  zero_trades_252d  rvol_252d  \n",
-      "0             0.002780          0.002652   0.019544  \n",
-      "1             0.002416          0.002676   0.018949  \n",
-      "2             0.002751          0.002807   0.015241  \n",
-      "3             0.003165          0.002890   0.014489  \n",
-      "4             0.002529          0.002844   0.015136  \n",
-      "...                ...               ...        ...  \n",
-      "28708         0.003303          0.004328   0.014563  \n",
-      "28709         0.004732          0.004310   0.014580  \n",
-      "28710         0.004156          0.004308   0.014428  \n",
-      "28711         0.004262          0.004312   0.014193  \n",
-      "28712         0.004529          0.004370   0.013393  \n",
-      "\n",
-      "[28713 rows x 122 columns]\n"
+      "(28713, 122)\n"
      ]
     }
    ],
    "source": [
-    "print(chars)"
+    "print(chars.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "id": "0fbfd63f-a1ff-42c1-90c5-b37ec3c0d418",
    "metadata": {},
    "outputs": [
@@ -762,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "id": "b649c7a1-eecd-4c0d-9b95-9a79564d0c7c",
    "metadata": {},
    "outputs": [
@@ -783,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "id": "5356f817-a44f-45d4-aa35-34773b6188a2",
    "metadata": {},
    "outputs": [
@@ -856,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "id": "178453c8-9ce5-47b4-b3b9-1088eece9039",
    "metadata": {},
    "outputs": [
@@ -880,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "id": "38436888-aff6-43a9-a548-c4edb9d14db0",
    "metadata": {},
    "outputs": [
@@ -909,7 +857,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "id": "bb9a211a-1136-41f5-af98-2d2b31f8c5ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "id": "cda6db48-f963-4e65-950f-7c1207c27920",
    "metadata": {},
    "outputs": [
@@ -937,11 +893,11 @@
       "3 2010-04-30  1.566419e+09  0.019248\n",
       "4 2010-05-31  1.597162e+09 -0.080946\n",
       "           eom        wealth    mu_ld1\n",
+      "163 2023-08-31  9.975058e+09 -0.019997\n",
       "164 2023-09-30  9.779494e+09 -0.048173\n",
       "165 2023-10-31  9.330037e+09 -0.029172\n",
       "166 2023-11-30  9.065579e+09  0.093442\n",
-      "167 2023-12-31           NaN       NaN\n",
-      "168 2023-12-31  1.000000e+10       NaN\n"
+      "167 2023-11-30  1.000000e+10       NaN\n"
      ]
     }
    ],
@@ -959,6 +915,100 @@
     "wealth = wealth_func(wealth_end, end, market, risk_free)\n",
     "print(wealth.head())\n",
     "print(wealth.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "fcd77405-7173-471d-8313-59503f48014d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eom       datetime64[ns]\n",
+      "mu_ld0           float64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Omdøb 'mu_ld1' til 'mu_ld0' i wealth og behold kun relevante kolonner\n",
+    "wealth_subset = wealth.rename(columns={\"mu_ld1\": \"mu_ld0\"})[[\"eom\", \"mu_ld0\"]]\n",
+    "print(wealth_subset.dtypes)\n",
+    "# Merge wealth ind i chars baseret på eom (håndterer mange-til-mange relationer)\n",
+    "chars = chars.merge(wealth_subset, on=\"eom\", how=\"left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "150f268b-1435-4547-8e8b-e4d496ab7934",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          id        eom    tr_ld0    eom_ret   ret_ld1    tr_ld1   sic  \\\n",
+      "0      10104 2010-01-31       NaN 2010-02-28  0.068941  0.068941  7372   \n",
+      "1      10104 2010-02-28  0.068941 2010-03-31  0.042934  0.042934  7372   \n",
+      "2      10104 2010-03-31  0.042934 2010-04-30  0.007960  0.008060  7372   \n",
+      "3      10104 2010-04-30  0.008060 2010-05-31 -0.127589 -0.127489  7372   \n",
+      "4      10104 2010-05-31 -0.127489 2010-06-30 -0.049307 -0.049207  7372   \n",
+      "...      ...        ...       ...        ...       ...       ...   ...   \n",
+      "28547  92655 2023-06-30 -0.010165 2023-07-31  0.049142  0.053142  6324   \n",
+      "28548  92655 2023-07-31  0.053142 2023-08-31 -0.063368 -0.058868  6324   \n",
+      "28549  92655 2023-08-31 -0.058868 2023-09-30  0.057611  0.062111  6324   \n",
+      "28550  92655 2023-09-30  0.062111 2023-10-31  0.057504  0.061804  6324   \n",
+      "28551  92655 2023-10-31  0.061804 2023-11-30  0.028084  0.032784  6324   \n",
+      "\n",
+      "      size_grp            me  rvol_252d  ...  tax_gr1a  turnover_126d  \\\n",
+      "0         mega  115558.73052   0.019544  ... -0.000151       0.006062   \n",
+      "1         mega  123619.74809   0.018949  ... -0.000151       0.006243   \n",
+      "2         mega  129040.82501   0.015241  ...  0.000186       0.005967   \n",
+      "3         mega  130101.18774   0.014489  ...  0.000186       0.005590   \n",
+      "4         mega  113436.81847   0.015136  ...  0.000186       0.006023   \n",
+      "...        ...           ...        ...  ...       ...            ...   \n",
+      "28547     mega  447491.23412   0.014456  ...  0.004583       0.003772   \n",
+      "28548     mega  471446.66929   0.014563  ...  0.004618       0.003850   \n",
+      "28549     mega  441458.42446   0.014580  ...  0.004618       0.003587   \n",
+      "28550     mega  467033.72021   0.014428  ...  0.004618       0.003568   \n",
+      "28551     mega  496091.90354   0.014193  ...  0.004090       0.003454   \n",
+      "\n",
+      "       turnover_var_126d  zero_trades_126d  zero_trades_21d  zero_trades_252d  \\\n",
+      "0               0.439375          0.002792         0.002780          0.002652   \n",
+      "1               0.425637          0.002704         0.002416          0.002676   \n",
+      "2               0.356592          0.002753         0.002751          0.002807   \n",
+      "3               0.344846          0.002935         0.003165          0.002890   \n",
+      "4               0.361901          0.002833         0.002529          0.002844   \n",
+      "...                  ...               ...              ...               ...   \n",
+      "28547           0.458961          0.004097         0.003516          0.004387   \n",
+      "28548           0.522602          0.004023         0.003303          0.004328   \n",
+      "28549           0.534361          0.004160         0.004732          0.004310   \n",
+      "28550           0.549164          0.004167         0.004156          0.004308   \n",
+      "28551           0.557890          0.004247         0.004262          0.004312   \n",
+      "\n",
+      "             dolvol        lambda    rvol_m    mu_ld0  \n",
+      "0      6.798938e+08  2.941636e-10  0.089560 -0.038043  \n",
+      "1      7.094750e+08  2.818986e-10  0.086833  0.034614  \n",
+      "2      6.982804e+08  2.864179e-10  0.069843  0.064595  \n",
+      "3      6.802223e+08  2.940215e-10  0.066398  0.019248  \n",
+      "4      7.368972e+08  2.714083e-10  0.069360 -0.080946  \n",
+      "...             ...           ...       ...       ...  \n",
+      "28547  1.704982e+09  1.173033e-10  0.066245  0.069017  \n",
+      "28548  1.732788e+09  1.154209e-10  0.066737  0.036647  \n",
+      "28549  1.619178e+09  1.235194e-10  0.066813 -0.019997  \n",
+      "28550  1.619647e+09  1.234837e-10  0.066119 -0.048173  \n",
+      "28551  1.578173e+09  1.267289e-10  0.065042 -0.029172  \n",
+      "\n",
+      "[28552 rows x 128 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chars)"
    ]
   },
   {
