Opdateret prepare_data

--- a/Lokal_test.ipynb
+++ b/Lokal_test.ipynb
@@ -2,29 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 1,
    "id": "18690dbb-f861-4899-b70d-ada55a051871",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'size_screen_fun' from 'General_Functions' (C:\\Users\\jonas\\PycharmProjects\\Master\\General_Functions.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[153], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtseries\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moffsets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m MonthEnd\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPrepare_Data\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m process_risk_free_rate, process_return_data, wealth_func, load_and_filter_market_returns_test\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mGeneral_Functions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m size_screen_fun, addition_deletion_fun\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstats\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m rankdata\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'size_screen_fun' from 'General_Functions' (C:\\Users\\jonas\\PycharmProjects\\Master\\General_Functions.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from General_Functions import long_horizon_ret\n",
     "from Main import settings, features, pf_set\n",
     "from pandas.tseries.offsets import MonthEnd\n",
-    "from Prepare_Data import process_risk_free_rate, process_return_data, wealth_func, load_and_filter_market_returns_test\n",
+    "from Prepare_Data import process_risk_free_rate, process_return_data, wealth_func, load_and_filter_market_returns_test, process_all_data\n",
     "from General_Functions import size_screen_fun, addition_deletion_fun\n",
     "import numpy as np\n",
     "from scipy.stats import rankdata\n",
@@ -2912,36 +2900,93 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7f10c52-7491-406e-a273-3db6a7225cea",
+   "cell_type": "markdown",
+   "id": "019cda0d-c8ae-4fb6-a5c5-3f139a8f7e36",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Test of new chars and daily function"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d101c59c-a440-4cb2-a24c-533350b922ce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All missing excludes 0.60% of the observations\n",
+      "Filen er indlæst og filtreret succesfuldt.\n",
+      "No size screen\n",
+      "Turnover wo addition/deletion rule: 0.19%\n",
+      "Turnover w  addition/deletion rule: 33.72%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Eksempel på parametre (disse skal defineres i din kode)\n",
+    "file_path_usa_test = \"./data_test/usa_test.parquet\"\n",
+    "daily_file_path = \"./data_test/usa_dsf_test.parquet\"\n",
+    "file_path_world_ret = \"./data_test/world_ret_test.csv\"\n",
+    "risk_free_path = \"./data_test/risk_free_test.csv\"\n",
+    "market_path = \"./data_test/market_returns_test.csv\"\n",
+    "\n",
+    "# Kald funktionen\n",
+    "chars, daily = process_all_data(file_path_usa_test, daily_file_path, file_path_world_ret, risk_free_path, market_path)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6f55010b-742e-4153-adec-5062d489cb36",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(28369, 130)\n",
+      "(602512, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chars.shape)\n",
+    "print(daily.shape)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c6f498a8-2895-42cd-8e1e-8f979c3b50e0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          id        eom   sic size_grp            me  rvol_252d  dolvol_126d       age   aliq_at  aliq_mat  ...        dolvol        lambda    rvol_m    tr_ld0    eom_ret   ret_ld1    tr_ld1    mu_ld0   ff12  valid\n",
+      "1      10104 2010-02-28  7372     mega  123619.74809   0.343023     0.854651  0.270349  0.411043  0.177914  ...  7.094750e+08  2.818986e-10  0.086833  0.068941 2010-03-31  0.042934  0.042934  0.034614  BusEq  False\n",
+      "2      10104 2010-03-31  7372     mega  129040.82501   0.267442     0.854651  0.270349  0.558282  0.184049  ...  6.982804e+08  2.864179e-10  0.069843  0.042934 2010-04-30  0.007960  0.008060  0.064595  BusEq  False\n",
+      "3      10104 2010-04-30  7372     mega  130101.18774   0.284884     0.848837  0.270349  0.462500  0.157233  ...  6.802223e+08  2.940215e-10  0.066398  0.008060 2010-05-31 -0.127589 -0.127489  0.019248  BusEq  False\n",
+      "4      10104 2010-05-31  7372     mega  113436.81847   0.354651     0.848837  0.270349  0.456250  0.176101  ...  7.368972e+08  2.714083e-10  0.069360 -0.127489 2010-06-30 -0.049307 -0.049207 -0.080946  BusEq  False\n",
+      "5      10104 2010-06-30  7372     mega  107857.95540   0.261628     0.843023  0.270349  0.400000  0.113208  ...  7.367673e+08  2.714561e-10  0.066903 -0.049207 2010-07-31  0.103772  0.103872 -0.053784  BusEq  False\n",
+      "...      ...        ...   ...      ...           ...        ...          ...       ...       ...       ...  ...           ...           ...       ...       ...        ...       ...       ...       ...    ...    ...\n",
+      "28707  92655 2023-06-30  6324     mega  447491.23412   0.284884     0.953488  0.328488  0.358025  0.279221  ...  1.704982e+09  1.173033e-10  0.066245 -0.010165 2023-07-31  0.049142  0.053142  0.069017  Money   True\n",
+      "28708  92655 2023-07-31  6324     mega  471446.66929   0.319767     0.953488  0.328488  0.586420  0.392157  ...  1.732788e+09  1.154209e-10  0.066737  0.053142 2023-08-31 -0.063368 -0.058868  0.036647  Money   True\n",
+      "28709  92655 2023-08-31  6324     mega  441458.42446   0.348837     0.941860  0.328488  0.586420  0.379085  ...  1.619178e+09  1.235194e-10  0.066813 -0.058868 2023-09-30  0.057611  0.062111 -0.019997  Money   True\n",
+      "28710  92655 2023-09-30  6324     mega  467033.72021   0.360465     0.947674  0.328488  0.580247  0.348684  ...  1.619647e+09  1.234837e-10  0.066119  0.062111 2023-10-31  0.057504  0.061804 -0.048173  Money   True\n",
+      "28711  92655 2023-10-31  6324     mega  496091.90354   0.389535     0.941860  0.328488  0.425926  0.309211  ...  1.578173e+09  1.267289e-10  0.065042  0.061804 2023-11-30  0.028084  0.032784 -0.029172  Money   True\n",
+      "\n",
+      "[28369 rows x 130 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chars)"
+   ]
   },
   {
    "cell_type": "code",
