Test af covarians-matricer

--- a/Lokalt_test_cov_matrix_korrekt.ipynb
+++ b/Lokalt_test_cov_matrix_korrekt.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "1dc4b322-bf3f-4fda-b541-71e1d305d675",
+   "execution_count": 1,
+   "id": "141e613d-79ae-4867-b819-bcdfe3c54ee4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features list length: 154\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -22,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "202752b6-cd05-4034-9c3f-9df7ca23a482",
+   "execution_count": 2,
+   "id": "c46034c3-c4de-44ae-a749-55585c796280",
    "metadata": {},
    "outputs": [
     {
@@ -120,75 +128,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "07653eb4-d6a0-4303-b823-5afa0fe5cf48",
-   "metadata": {},
-   "source": [
-    "### Først cluster_labels:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "35fc538d-4ca3-4c98-8c5c-0cb9de87c485",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  characteristic       cluster  direction\n",
-      "0            age  low_leverage       -1.0\n",
-      "1        aliq_at    investment       -1.0\n",
-      "2       aliq_mat  low_leverage       -1.0\n",
-      "3       ami_126d          size        1.0\n",
-      "4          at_be  low_leverage       -1.0\n",
-      "       characteristic       cluster  direction\n",
-      "0                 age  low_leverage       -1.0\n",
-      "1             aliq_at    investment       -1.0\n",
-      "2            aliq_mat  low_leverage       -1.0\n",
-      "3            ami_126d          size        1.0\n",
-      "4               at_be  low_leverage       -1.0\n",
-      "..                ...           ...        ...\n",
-      "149           z_score  low_leverage        1.0\n",
-      "150  zero_trades_126d      low_risk        1.0\n",
-      "151   zero_trades_21d      low_risk        1.0\n",
-      "152  zero_trades_252d      low_risk        1.0\n",
-      "153         rvol_252d      low_risk       -1.0\n",
-      "\n",
-      "[154 rows x 3 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Læs cluster labels data\n",
-    "cluster_labels = pd.read_csv(\"Data/Cluster Labels.csv\")\n",
-    "\n",
-    "# Konverter cluster-navne til små bogstaver og erstat mellemrum og bindestreger med _\n",
-    "cluster_labels[\"cluster\"] = cluster_labels[\"cluster\"].str.lower().str.replace(r\"\\s|-\", \"_\", regex=True)\n",
-    "\n",
-    "# Læs factor_signs fra Excel\n",
-    "factor_signs = pd.read_excel(\"Data/Factor Details.xlsx\", usecols=[\"abr_jkp\", \"direction\"])\n",
-    "factor_signs = factor_signs.rename(columns={\"abr_jkp\": \"characteristic\"})\n",
-    "factor_signs = factor_signs.dropna(subset=[\"characteristic\"])\n",
-    "factor_signs[\"direction\"] = factor_signs[\"direction\"].astype(float)  # Konverter til numerisk\n",
-    "\n",
-    "# Merge factor_signs med cluster_labels på characteristic\n",
-    "cluster_labels = cluster_labels.merge(factor_signs, on=\"characteristic\", how=\"left\")\n",
-    "\n",
-    "# Tilføj rvol_252d til Low Risk\n",
-    "new_row = pd.DataFrame({\"characteristic\": [\"rvol_252d\"], \"cluster\": [\"low_risk\"], \"direction\": [-1]})\n",
-    "cluster_labels = pd.concat([cluster_labels, new_row], ignore_index=True)\n",
-    "\n",
-    "# Output result\n",
-    "print(cluster_labels.head())\n",
-    "print(cluster_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "33404fb3-7c4a-4024-87ab-41babe341e9d",
+   "execution_count": 3,
+   "id": "89413faf-1b22-46be-81f4-60bf3e713c6f",
    "metadata": {},
    "outputs": [
     {
@@ -221,8 +163,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "1fcd7a5c-07e8-4215-a755-4b9f6c49e58e",
+   "execution_count": 4,
+   "id": "985c146d-d311-4387-8745-2fe92cd45122",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +235,7 @@
     }
    ],
    "source": [
-    "# Antagelse: chars og cluster_labels er pandas dataframes\n",
+    "# Prepare cluster characteristics\n",
     "valid_chars = chars[chars[\"valid\"] == True]\n",
     "cluster_data_m = valid_chars[[\"id\", \"eom\", \"size_grp\", \"ff12\"] + features].copy()\n",
     "\n",
@@ -330,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0c5e496-c118-499a-ab6f-7fef0986bef8",
+   "id": "680e0d83-3b35-40ea-bf05-0264e10513b9",
    "metadata": {},
    "outputs": [],
    "source": []
